--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item2">
-                  <img src="assets/img/testimonials/testimonials-9.jpeg" style="width: 90px; height: 90px;" class="testimonial-img" alt="">
-                  <h3>Fernanda Gunawan</h3>
-                  <h4>My Gf</h4>
+                  <img src="assets/img/testimonials/testimonials-5.jpg" style="width: 90px; height: 90px;" class="testimonial-img" alt="">
+                  <h3>Reza Sayuti</h3>
+                  <h4>Student</h4>
                   <p style="color: #2c4964; margin: 10px 0 0 0; font-size: 24px;">
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                     <i>"Like edelweis flower, we're make sure you're happy and healthy."</i>
